Completed adding and styling left side header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Sign-Up</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="left">
+        <div class="logo-container">
+            <img src="assets/odin.png" alt="The Odin Project Logo">
+            <div class="title">ODIN</div>
+        </div>
+        <div class="credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></div>
+    </div>
+    <div class="right"></div>
     <script src="app.js"></script>
 </body>
 </html>
